# 30122-project-media-insights

./: Makefile  README.md  app.py  automate.sh  pyproject.toml
.streamlit/: config.toml
api/: client_secret_166032070023-23mugn9l6ig6927gd6h9gfgsp0ebfdn1.apps.googleusercontent.com.json  my_test.py  my_test2.py
data/: clean_comments.py  cleaned_comment_data.json  comment_data.json  comments.py  preprocessed_comments.csv  preprocessed_comments.json  simple_request.py
media_insights/: Makefile  automate.sh  dashboard.py  scrape.sh  slow automate.sh  slow_automate.sh
media_insights/analysis/: process_comments.py
media_insights/cleaning/: process_comments.py
media_insights/cleaning/notebooks/: exploration.ipynb
media_insights/dashboard/: dashboard.py  ts_plots.py  word_cloud.py
media_insights/data/: cleaned_comment_data.json  comment_data.json  preprocessed_comments.json  similarity_data.json  transcript_data.json
media_insights/plotting/: process_comments.py  ts_plots.py  word_cloud.py
media_insights/plotting/notebooks/: exploration.ipynb
media_insights/scraping/: clean_comments.py  comments.py  transcripts.py
media_insights/upload/: __main__.py  client_secrets.json  upload.py  upload.sh  upload_video.py  upload_video.py-oauth2.json
plotting/: plot_all_videos.py  process_comments.py  ts_plots.py  word_cloud.ipynb  word_cloud.py
plotting/notebooks/: exploration.ipynb  ts_plots.ipynb
scraping/: clean_comments.py  cleaned_comment_data.json  comment_data.json  comments.py
upload/: potential_bash.txt  upload.py  upload.sh  upload_video.py
upload/videos/: test1.mov
