[tool.poetry]
name = "media insights"
version = "1.0.0"
description = "Media Insights Project with Jessup Jong and Darren Colby"
authors = ["Jessup Jong and Darren Colby"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.76.0"
google-auth-oauthlib = "^0.8.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
